objects/Screening_Interview__c.object
<CustomObject>
    <fields>
        <fullName>Languages_SI__c</fullName>
        <formula>IF(INCLUDES( Candidate__r.Languages__c , &quot;NONE&quot;), &quot;NONE; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Arabic&quot;), &quot;Arabic; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Bengali&quot;), &quot;Bengali; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Cantonese&quot;), &quot;Cantonese; &quot;, NULL) &amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Dutch/Africaans&quot;), &quot;Dutch/Africaans; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Other&quot;), &quot;Other; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;English&quot;), &quot;English; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Farsi (Persian)&quot;), &quot;Farsi (Persian); &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;French&quot;), &quot;French; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;German&quot;), &quot;German; &quot;, NULL) &amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Hindustani (Hindu/Urdu); &quot;), &quot;Hindustani (Hindu/Urdu)&quot;, NULL) &amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Italian&quot;), &quot;Italian; &quot;, NULL) &amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Japanese&quot;), &quot;Japanese; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Javanese&quot;), &quot;Javanese; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Korean&quot;), &quot;Korean; &quot;, NULL)&amp; 

IF(INCLUDES( Candidate__r.Languages__c , &quot;Malay&quot;), &quot;Malay; &quot;, NULL)&amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Mandarin&quot;), &quot;Mandarin; &quot;, NULL) &amp; 

IF(INCLUDES( Candidate__r.Languages__c, &quot;Polish&quot;), &quot;Polish; &quot;, NULL) &amp;

IF(INCLUDES( Candidate__r.Languages__c , &quot;Portuguese&quot;), &quot;Portuguese; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Punjabi&quot;), &quot;Punjabi; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Russian&quot;), &quot;Russian; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Spanish&quot;), &quot;Spanish; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Swahili&quot;), &quot;Swahili; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Tagalog&quot;), &quot;Tagalog; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Tamil&quot;), &quot;Tamil; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Thai&quot;), &quot;Thai; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Turkish&quot;), &quot;Turkish; &quot;, NULL) &amp; 
IF(INCLUDES( Candidate__r.Languages__c , &quot;Vietnamese&quot;), &quot;Vietnamese; &quot;, NULL)</formula>
        <label>Languages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Dutch/Africaans</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi (Persian)</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindustani (Hindu/Urdu)</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Javanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Punjabi</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swahili</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Largest_Deal__c</fullName>
        <label>Largest Deal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-5k</fullName>
                </value>
                <value>
                    <fullName>5-10k</fullName>
                </value>
                <value>
                    <fullName>10k-25k</fullName>
                </value>
                <value>
                    <fullName>25k-50k</fullName>
                </value>
                <value>
                    <fullName>50k-100k</fullName>
                </value>
                <value>
                    <fullName>100k-1 Million</fullName>
                </value>
                <value>
                    <fullName>1 Million+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Job_Applied_To__c</fullName>
        <formula>Candidate__r.ts2__Jobs_Applied_For__c</formula>
        <label>Last Job Applied To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Note__c</fullName>
        <formula>Candidate__r.Location_Note__c</formula>
        <label>Location Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Preference__c</fullName>
        <formula>IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;San Francisco&quot;), &quot;SF; &quot;, NULL) &amp;
IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;East Bay&quot;), &quot;EB; &quot;, NULL) &amp;
IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;North Bay&quot;), &quot;North Bay; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Silicon Valley&quot;), &quot;SV; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Peninsula&quot;), &quot;Peninsula; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Daly City- Burlingame&quot;), &quot;Daly City - Burlingame; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Burlingame - Menlo Park&quot;), &quot;Burlingame - Menlo Park; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Menlo Park - Mountain View&quot;), &quot;Menlo Park - Mountain View; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Mountain View - San Jose&quot;), &quot;Mountain View - San Jose; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Other&quot;), &quot;Other; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;New York&quot;), &quot;NY; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Midtown&quot;), &quot;Midtown; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Downtown&quot;), &quot;Downtown; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Jersey City&quot;), &quot;Jersey City; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Long Island&quot;), &quot;Long Island; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Westchester/White Plains&quot;), &quot;Westchester/White Plains; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Stanford&quot;), &quot;Stanford; &quot;, NULL)&amp; 

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Chicago&quot;), &quot;Chicago; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Boston&quot;), &quot;Boston; &quot;, NULL)&amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Austin&quot;), &quot;Austin; &quot;, NULL)&amp;
IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Los Angeles&quot;), &quot;Los Angeles; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Sacramento&quot;), &quot;Sac; &quot;, NULL) &amp;

IF(INCLUDES(  Candidate__r.LocationPreference__c  , &quot;Washington DC&quot;), &quot;DC; &quot;, NULL) &amp;

IF(INCLUDES( Candidate__r.LocationPreference__c, &quot;San Diego&quot;), &quot;SD; &quot;, NULL)</formula>
        <label>Location Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>Candidate__r.MailingCity</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Size__c</fullName>
        <label>Market Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Hourly__c</fullName>
        <label>Minimum Hourly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_OTE__c</fullName>
        <label>Minimum OTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Salary__c</fullName>
        <label>Minimum Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Candidate__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Placement__c</fullName>
        <formula>Candidate__r.Latest_Placement__r.Name</formula>
        <label>Most Recent Placement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Screening_Interview__c</fullName>
        <formula>IF(Owner__r.Id= $User.Id  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Screening Interview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Unemployment__c</fullName>
        <formula>IF( Candidate__r.EDD_Claim_Filed__c == TRUE, TRUE, FALSE)</formula>
        <inlineHelpText>Candidate has filed a valid unemployment claim against Premier.</inlineHelpText>
        <label>On Unemployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner__r.FirstName &amp; &quot; &quot; &amp; Owner__r.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Shows the role of the Screening Interview owner.</description>
        <formula>Owner__r.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is a candidate user, please select the one with a title.</errorMessage>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>notEqual</operation>
                <value>00e400000017Nr4</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Screening_Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>People_Status__c</fullName>
        <formula>TEXT( Candidate__r.ts2__People_Status__c)</formula>
        <label>People Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perks_and_Benefits__c</fullName>
        <label>Perks and Benefits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personality_Profile__c</fullName>
        <label>Personality Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pod_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pod Referral</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Screening_Interviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Positions_1__c</fullName>
        <label>Positions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Category_1__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/P</fullName>
                </value>
                <value>
                    <fullName>A/R</fullName>
                </value>
                <value>
                    <fullName>Account Coordinator</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Accounting Assistant</fullName>
                </value>
                <value>
                    <fullName>Accounting Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>C-Level Support</fullName>
                </value>
                <value>
                    <fullName>Client Services Associate</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Copywriter</fullName>
                </value>
                <value>
                    <fullName>Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Service Representative</fullName>
                </value>
                <value>
                    <fullName>Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Database Admin</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Entry-Level</fullName>
                </value>
                <value>
                    <fullName>Events Assistant</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Coordinator</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Manager</fullName>
                </value>
                <value>
                    <fullName>Events Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positions_2__c</fullName>
        <label>Positions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Category_2__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/P</fullName>
                </value>
                <value>
                    <fullName>A/R</fullName>
                </value>
                <value>
                    <fullName>Account Coordinator</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Accounting Assistant</fullName>
                </value>
                <value>
                    <fullName>Accounting Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Chief Of Staff</fullName>
                </value>
                <value>
                    <fullName>C-Level Support</fullName>
                </value>
                <value>
                    <fullName>Client Services Associate</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Copywriter</fullName>
                </value>
                <value>
                    <fullName>Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Service Representative</fullName>
                </value>
                <value>
                    <fullName>Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Database Admin</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Entry-Level</fullName>
                </value>
                <value>
                    <fullName>Events Assistant</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Coordinator</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Manager</fullName>
                </value>
                <value>
                    <fullName>Events Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positions_3__c</fullName>
        <label>Positions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Category_3__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/P</fullName>
                </value>
                <value>
                    <fullName>A/R</fullName>
                </value>
                <value>
                    <fullName>Account Coordinator</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Accounting Assistant</fullName>
                </value>
                <value>
                    <fullName>Accounting Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Benefits Admin</fullName>
                </value>
                <value>
                    <fullName>Bookkeeper</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Chief Of Staff</fullName>
                </value>
                <value>
                    <fullName>C-Level Support</fullName>
                </value>
                <value>
                    <fullName>Client Services Associate</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Copywriter</fullName>
                </value>
                <value>
                    <fullName>Customer Service Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Service Representative</fullName>
                </value>
                <value>
                    <fullName>Customer Success Manager</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Database Admin</fullName>
                </value>
                <value>
                    <fullName>Data Entry</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Entry-Level</fullName>
                </value>
                <value>
                    <fullName>Events Assistant</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Coordinator</fullName>
                </value>
                <value>
                    <fullName>Events Logistics Manager</fullName>
                </value>
                <value>
                    <fullName>Events Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positions_All_1__c</fullName>
        <description>Admin Assistant, C-Level Support, Data Entry, Executive Assistant, File Clerk, Legal Assistant/Paralegal, Office Assistant, Office Manager, Personal Assistant, Property Assistant, Reception, Benefits Admin, HR Assistant, &amp; HR Coordinator</description>
        <formula>IF(INCLUDES( Positions_1__c ,&quot;Admin Assistant&quot;), &quot;Admin Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES( Positions_2__c ,&quot;Admin Assistant&quot;), &quot;Admin Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES( Positions_3__c ,&quot;Admin Assistant&quot;), &quot;Admin Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;C-Level Support&quot;), &quot;C-Level Support, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;C-Level Support&quot;), &quot;C-Level Support, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;C-Level Support&quot;), &quot;C-Level Support, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Data Entry&quot;), &quot;Data Entry, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Data Entry&quot;), &quot;Data Entry, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Data Entry&quot;), &quot;Data Entry, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Executive Assistant&quot;), &quot;Executive Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Executive Assistant&quot;), &quot;Executive Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Executive Assistant&quot;), &quot;Executive Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;File Clerk&quot;), &quot;File Clerk, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;File Clerk&quot;), &quot;File Clerk, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;File Clerk&quot;), &quot;File Clerk, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Legal Assistant/Paralegal&quot;), &quot;Legal Assistant/Paralegal, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Legal Assistant/Paralegal&quot;), &quot;Legal Assistant/Paralegal, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Legal Assistant/Paralegal&quot;), &quot;Legal Assistant/Paralegal, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Office Assistant&quot;), &quot;Office Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Office Assistant&quot;), &quot;Office Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Office Assistant&quot;), &quot;Office Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Office Manager&quot;), &quot;Office Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Office Manager&quot;), &quot;Office Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Office Manager&quot;), &quot;Office Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Personal Assistant&quot;), &quot;Personal Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Personal Assistant&quot;), &quot;Personal Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Personal Assistant&quot;), &quot;Personal Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Property Assistant&quot;), &quot;Property Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Property Assistant&quot;), &quot;Property Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Property Assistant&quot;), &quot;Property Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Reception&quot;), &quot;Reception, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Reception&quot;), &quot;Reception, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Reception&quot;), &quot;Reception, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Benefits Admin&quot;), &quot;Benefits Admin, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Benefits Admin&quot;), &quot;Benefits Admin, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Benefits Admin&quot;), &quot;Benefits Admin, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;HR Assistant&quot;), &quot;HR Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;HR Assistant&quot;), &quot;HR Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;HR Assistant&quot;), &quot;HR Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;HR Coordinator&quot;), &quot;HR Coordinator, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;HR Coordinator&quot;), &quot;HR Coordinator, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;HR Coordinator&quot;), &quot;HR Coordinator, &quot;, &quot;&quot;)</formula>
        <label>Positions All 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positions_All_2__c</fullName>
        <description>HR Director, HR Generalist, HR Manager, VP of HR, Copywriter, Editor, Graphic Designer, Marketing Analyst, Marketing Associate, Marketing Coordinator, PR Assistant, PR Associate, Product/Project Manager, Product Marketingg</description>
        <formula>IF(INCLUDES(Positions_1__c,&quot;HR Director&quot;), &quot;HR Director, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;HR Director&quot;), &quot;HR Director, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;HR Director&quot;), &quot;HR Director, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;HR Generalist&quot;), &quot;HR Generalist, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;HR Generalist&quot;), &quot;HR Generalist, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;HR Generalist&quot;), &quot;HR Generalist, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;HR Manager&quot;), &quot;HR Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;HR Manager&quot;), &quot;HR Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;HR Manager&quot;), &quot;HR Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;VP of HR&quot;), &quot;VP of HR, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;VP of HR&quot;), &quot;VP of HR, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;VP of HR&quot;), &quot;VP of HR, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Copywriter&quot;), &quot;Copywriter, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Copywriter&quot;), &quot;Copywriter, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Copywriter&quot;), &quot;Copywriter, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Editor&quot;), &quot;Editor, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Editor&quot;), &quot;Editor, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Editor&quot;), &quot;Editor, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Graphic Designer&quot;), &quot;Graphic Designer, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Graphic Designer&quot;), &quot;Graphic Designer, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Graphic Designer&quot;), &quot;Graphic Designer, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Marketing Analyst&quot;), &quot;Marketing Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Marketing Analyst&quot;), &quot;Marketing Analyst, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Marketing Analyst&quot;), &quot;Marketing Analyst, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Marketing Associate&quot;), &quot;Marketing Associate, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Marketing Associate&quot;), &quot;Marketing Associate, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Marketing Associate&quot;), &quot;Marketing Associate, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Marketing Coordinator&quot;), &quot;Marketing Coordinator, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Marketing Coordinator&quot;), &quot;Marketing Coordinator, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Marketing Coordinator&quot;), &quot;Marketing Coordinator, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;PR Assistant&quot;), &quot;PR Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;PR Assistant&quot;), &quot;PR Assistant, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;PR Assistant&quot;), &quot;PR Assistant, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;PR Associate&quot;), &quot;PR Associate, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;PR Associate&quot;), &quot;PR Associate, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;PR Associate&quot;), &quot;PR Associate, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Product/Project Manager&quot;), &quot;Product/Project Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Product/Project Manager&quot;), &quot;Product/Project Manager, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Product/Project Manager&quot;), &quot;Product/Project Manager, &quot;, &quot;&quot;) +

IF(INCLUDES(Positions_1__c,&quot;Product Marketing&quot;), &quot;Product Marketing, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_2__c,&quot;Product Marketing&quot;), &quot;Product Marketing, &quot;, &quot;&quot;) +
IF(INCLUDES(Positions_3__c,&quot;Product Marketing&quot;), &quot;Product Marketing, &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Positions All 2</label>
        <type>Text</type>
    </fields>
</CustomObject>